# aseprite-test-data

./: Cargo.toml  Readme.md  lib.rs
data/1.2.25/: reexport.cmd
data/1.2.25/_src/: basic-grey-1x1-black.aseprite  basic-grey-1x1-white.aseprite  basic-indexed-1x1-green.aseprite  basic-indexed-1x1-transparent.aseprite  basic-rgba-1x1-empty.aseprite  basic-rgba-1x1-green-monitor1.aseprite  basic-rgba-1x1-green-none.aseprite  basic-rgba-1x1-transparent-square.aseprite  basic-rgba-1x1-transparent-tall.aseprite  basic-rgba-1x1-transparent-wide.aseprite  complex.aseprite
data/1.2.25/array/: basic-grey-1x1-black.aseprite.json  basic-grey-1x1-white.aseprite.json  basic-indexed-1x1-green.aseprite.json  basic-indexed-1x1-transparent.aseprite.json  basic-rgba-1x1-empty.aseprite.json  basic-rgba-1x1-green-monitor1.aseprite.json  basic-rgba-1x1-green-none.aseprite.json  basic-rgba-1x1-green-srgb.aseprite.json  basic-rgba-1x1-transparent-square.aseprite.json  basic-rgba-1x1-transparent-tall.aseprite.json  basic-rgba-1x1-transparent-wide.aseprite.json  basic-rgba-1x1-transparent.aseprite.json  complex.aseprite.json
data/1.2.25/basic/: basic-grey-1x1-black.aseprite.json  basic-grey-1x1-white.aseprite.json  basic-indexed-1x1-green.aseprite.json  basic-indexed-1x1-transparent.aseprite.json  basic-rgba-1x1-empty.aseprite.json  basic-rgba-1x1-green-monitor1.aseprite.json  basic-rgba-1x1-green-none.aseprite.json  basic-rgba-1x1-green-srgb.aseprite.json  basic-rgba-1x1-transparent-square.aseprite.json  basic-rgba-1x1-transparent-tall.aseprite.json  basic-rgba-1x1-transparent.aseprite.json  (+2 more)
(+13 files in other folders)
