# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "aseprite-test-data"
version                                 = "0.1.0"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
repository                              = "https://github.com/MaulingMonkey/aseprite-test-data.git"
documentation                           = "https://docs.rs/aseprite-test-data/"
edition                                 = "2018"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "Test data for aseprite deserializers"
keywords                                = ["aseprite"]
exclude                                 = [".vscode/*"]

[lib]
path                                    = "lib.rs"

[badges]
travis-ci                               = { repository = "MaulingMonkey/aseprite-test-data", branch = "master" }
